# s6_apz_lab5

./: .gitignore  README.md  consul_setup.sh  docker-compose.yml  kafka_setup.sh  logging.proto  setup_consul.sh  setup_networks.sh
config/: config.yaml  pyproject.toml
config/src/: config.py
facade/: pyproject.toml  requirements.txt  start_one.sh
facade/src/: kafka.py  main.py
facade/src/grpc_generated/: logging_pb2_grpc.py
logging/: Dockerfile  pyproject.toml  requirements.txt  start_one.sh
logging/src/: hazelcaster.py  log.py  main.py
logging/src/grpc_generated/: logging_pb2.py  logging_pb2_grpc.py
messages/: pyproject.toml  requirements.txt  start_one.sh
messages/src/: kafka.py  main.py
