[project]
name = "facade"
version = "0.1.0"
description = ""
authors = [
    {name = "rhusiev",email = "63148080+rhusiev@users.noreply.github.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "grpcio (>=1.70.0,<2.0.0)",
    "grpcio-tools (>=1.70.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "confluent-kafka (>=2.9.0,<3.0.0)",
    "py-consul (>=1.6.0,<2.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
