[project]
name = "logging"
version = "0.1.0"
description = ""
authors = [
    {name = "rhusiev",email = "63148080+rhusiev@users.noreply.github.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
grpcio = "^1.70.0"
grpcio-tools = "^1.70.0"
hazelcast-python-client = "^5.5.0"
requests = "^2.32.3"
py-consul = "^1.6.0"
grpcio-health-checking = "^1.71.0"
